--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 /*     background: #fff; */
     background: url("https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN");
     background-size: cover;
+    filter: blur(20px);
 }
 
 html {
