--- a/style.css
+++ b/style.css
@@ -14,9 +14,14 @@ body {
     position: relative;
     overflow: hidden;
 /*     background: #fff; */
-    background: url("https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN");
+}
+.bgo{
+	background: url("https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN");
     background-size: cover;
-    filter: blur(5px);
+    filter: blur(3px);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 html {
