--- a/style.css
+++ b/style.css
@@ -80,7 +80,12 @@ a {
     width: 480px;
     height: 120px;
     margin: 20px auto;
-    background: url(icon/logo.svg) no-repeat center/cover;
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif;
+    font-weight: bold;
+    color: #eee;
+      /* background: url(icon/logo.svg) no-repeat center/cover; */
 }
 
 .con .shlogo a {
@@ -189,6 +194,10 @@ a {
     height: 20px;
     line-height: 20px;
     font-size: 12px;
+}
+.foot a{
+    color: #eee;
+    font-weight: bold;
 }
 
 .home{
