--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     height: 100%;
     position: relative;
     overflow: hidden;
-/*     background: #fff; */
+    background: linear-gradient(91deg,#f1eefc,#9dc6ff 70%,#a5bcff);
 }
 .bgo{
 	background: url("https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN");
@@ -84,7 +84,7 @@ a {
     font-size: 30px;
     font-family: sans-serif;
     font-weight: bold;
-    color: #eee;
+    color: rgb(255, 255, 255);
       /* background: url(icon/logo.svg) no-repeat center/cover; */
 }
 
@@ -116,7 +116,7 @@ a {
     width: 100%;
     height: 100%;
     display: block;
-    border: 1px solid #ddd;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 25px;
     line-height: 100%;
     text-indent: 20px;
