--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ a {
     margin: 24px auto;
     width: 30px;
     height: 2px;
-    background: #777;
+    background: rgb(255, 255, 255);
 }
 
 #menu i:before {
@@ -245,7 +245,7 @@ a {
     width: 20px;
     height: 2px;
     top: -8px;
-    background: #777;
+    background: rgb(255, 255, 255);
     position: absolute;
     right: 0;
 }
@@ -255,14 +255,14 @@ a {
     width: 20px;
     height: 2px;
     bottom: -8px;
-    background: #777;
+    background: rgb(255, 255, 255);
     position: absolute;
     left: 0;
 }
 
 #menu.on {
     right: 370px;
-    background: #eee;
+    background: #0f8beb;
     border-radius: 25px;
 }
 
@@ -304,10 +304,8 @@ a {
     right: -380px;
 }
 .list p{
-    width: 330px;
     text-align: center;
-    margin-bottom: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
     color: rgb(34, 19, 19);
 }
 .list ul {
@@ -346,7 +344,7 @@ a {
 }
 
 .list ul li:hover a {
-    background: #02f;
+    background: #249ffd;
     color: #fff;
 }
 .list ul li:hover a i{
@@ -367,7 +365,7 @@ a {
 }
 
 .list ul li.title i {
-    color: #02f;
+    color: #249ffd;
     margin-right: 5px;
 }
 
